--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -77,7 +77,7 @@ PROGS2 = bin/rpcclient bin/smbpasswd bin/make_smbcodepage @WRAP@ @WRAP32@
 MPROGS = @MPROGS@
 PROGS = $(PROGS1) $(PROGS2) $(MPROGS) bin/nmblookup bin/make_printerdef 
 
-SCRIPTS = script/smbtar script/addtosmbpass
+SCRIPTS = script/smbtar script/addtosmbpass script/convert_smbpasswd
 
 QUOTAOBJS=@QUOTAOBJS@
 
