Updating the password script and documenting password sync stuff.

--- a/packaging/PHT/TurboLinux/smb.conf
+++ b/packaging/PHT/TurboLinux/smb.conf
@@ -65,6 +65,16 @@
 ;  encrypt passwords = yes
 ;  smb passwd file = /etc/smbpasswd
 
+# The following are needed to allow password changing from Windows to
+# update the Linux sytsem password also.
+# NOTE: Use these with 'encrypt passwords' and 'smb passwd file' above.
+# NOTE2: You do NOT need these to allow workstations to change only
+#        the encrypted SMB passwords. They allow the Unix password
+#        to be kept in sync with the SMB password.
+;  unix password sync = Yes
+;  passwd program = /usr/bin/passwd %u
+;  passwd chat = *New*UNIX*password* %n\n *ReType*new*UNIX*password* %n\n *passwd:*all*authentication*tokens*updated*successfully*
+
 # Unix users can map to different SMB User names
 ;  username map = /etc/smbusers
 
