.cvsignore: Removed old entries. client/client.c: include/client.h: Added some debug messages that the old client used to 		  generate. These are needed to make scripts such as 		  'findsmb' work - there may be other changes to keep 		  backwards output compatibility. Do we need a -old-client-compat 		  argument ? libsmb/clientgen.c: Fixed crash bug where malloc'ed data wasn't being 		    cleared - corrupted malloc chains. web/swat.c: John's changes to get rid of "ghost" table entries.

--- a/source/.cvsignore
+++ b/source/.cvsignore
@@ -1,36 +1,8 @@
-.deps
 bin
 Makefile
-Makefile.RPM
-config
 config.cache
 config.h
 config.log
 config.status
 cvs.log
-d2
-make_printerdef
-make_smbcodepage
-makefile
-makefile.sunos5
-memcheck.awk
-nmbd
-nmblookup
-nmfns.txt
-nmlist.txt
-nmused.txt
-notes.txt
-smbclient
-smbd
-smbpasswd
-smbrun
-smbstatus
-smbtorture
-swat
-testparm
-testprns
-text.txt
-unused.txt
-wsmbconf
-wsmbstatus
-*.p
+so_locations
