--- a/source3/.cvsignore
+++ b/source3/.cvsignore
@@ -1,36 +1,8 @@
-.deps
 bin
 Makefile
-Makefile.RPM
-config
 config.cache
 config.h
 config.log
 config.status
 cvs.log
-d2
-make_printerdef
-make_smbcodepage
-makefile
-makefile.sunos5
-memcheck.awk
-nmbd
-nmblookup
-nmfns.txt
-nmlist.txt
-nmused.txt
-notes.txt
-smbclient
-smbd
-smbpasswd
-smbrun
-smbstatus
-smbtorture
-swat
-testparm
-testprns
-text.txt
-unused.txt
-wsmbconf
-wsmbstatus
-*.p
+so_locations
