--- a/source3/configure.in
+++ b/source3/configure.in
@@ -2,9 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/includes.h)
 AC_CONFIG_HEADER(include/config.h)
 
-dnl Checks for programs.
-AC_PROG_CC
-AC_PROG_INSTALL
+dnl Unique-to-Samba variables we'll be playing with.
 AC_SUBST(SHELL)
 AC_SUBST(MPROGS)
 AC_SUBST(LDSHFLAGS)
@@ -12,71 +10,14 @@ AC_SUBST(HOST_OS)
 AC_SUBST(WRAP)
 AC_SUBST(WRAP32)
 AC_SUBST(PICFLAG)
+dnl Checks for programs.
+AC_PROG_CC
+AC_PROG_INSTALL
 AC_PROG_AWK
 
 AC_CANONICAL_SYSTEM
 AC_VALIDATE_CACHE_SYSTEM_TYPE
 SAMBA_MAINTAINER_MODE
-
-
-
-# this bit needs to be modified for each OS that is suported by
-# smbwrapper. You need to specify how to created a shared library and
-# how to compile C code to produce PIC object files
-
-# these are the defaults, good for lots of systems
-HOST_OS="$host_os"
-LDSHFLAGS="-shared"
-
-# and these are for particular systems
-case "$host_os" in
-	*linux*)   AC_DEFINE(LINUX);;
-        *solaris*) AC_DEFINE(SUNOS5)
-                   LDSHFLAGS="-G"
-		   ;;
-        *sunos*) AC_DEFINE(SUNOS4)
-                LDSHFLAGS=""
-		;;
-        *bsd*) LDSHFLAGS="-shared -Bshareable"
-		;;
-        *irix*) AC_DEFINE(IRIX)
-		WRAP32=bin/smbwrapper.32.so
-		;;
-        *aix*) AC_DEFINE(AIX);;
-        *hpux*) AC_DEFINE(HPUX);;
-        *qnx*) AC_DEFINE(QNX);;
-        *osf*) AC_DEFINE(OSF1);;
-        *sco*) AC_DEFINE(SCO);;
-        *next2*) AC_DEFINE(NEXT2);;
-esac
-
-
-# try to work out how to produce pic code with this compiler
-PICFLAG=""
-AC_PROG_CC_FLAG(fpic)
-if test $ac_cv_prog_cc_fpic = yes; then
-   PICFLAG="-fpic";
-fi
-if test x$PICFLAG = x; then
-  AC_PROG_CC_FLAG(Kpic)
-  if test $ac_cv_prog_cc_Kpic = yes; then
-    PICFLAG="-Kpic";
-  fi 
-fi
-if test x$PICFLAG = x; then
-  AC_PROG_CC_FLAG(KPIC)
-  if test $ac_cv_prog_cc_KPIC = yes; then
-    PICFLAG="-KPIC";
-  fi 
-fi
-
-# we can only support smbsh and smbwrapper if we can produce PIC code
-if test x$PICFLAG = x; then
-   echo No support for PIC code - disabling smbwrapper and smbsh
-   WRAP=""
-else
-   WRAP="bin/smbsh bin/smbwrapper.so"
-fi
 
 AC_INLINE
 AC_HEADER_STDC
@@ -85,7 +26,7 @@ AC_HEADER_TIME
 AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS(sys/fcntl.h sys/select.h fcntl.h sys/time.h sys/unistd.h)
 AC_CHECK_HEADERS(unistd.h utime.h grp.h sys/id.h limits.h memory.h net/if.h)
-AC_CHECK_HEADERS(compat.h rpc/types.h rpc/xdr.h rpc/auth.h rpc/clnt.h)
+AC_CHECK_HEADERS(compat.h rpc/rpc.h rpc/types.h rpc/xdr.h rpc/auth.h rpc/clnt.h)
 AC_CHECK_HEADERS(rpcsvc/yp_prot.h rpcsvc/ypclnt.h sys/param.h ctype.h )
 AC_CHECK_HEADERS(sys/wait.h sys/resource.h sys/ioctl.h sys/mode.h)
 AC_CHECK_HEADERS(sys/filio.h string.h strings.h stdlib.h sys/socket.h)
@@ -227,6 +168,8 @@ AC_CHECK_FUNCS(setuidx setgroups mktime rename ftruncate stat64 fstat64 lstat64)
 AC_CHECK_FUNCS(set_auth_parameters atexit grantpt getspnam dup2 lseek64 ftruncate64)
 AC_CHECK_FUNCS(fseek64 ftell64 bigcrypt getprpwnam setluid yp_get_default_domain getpwanam)
 AC_CHECK_FUNCS(srandom random srand rand setenv)
+# syscall() is needed for smbwrapper.
+AC_CHECK_FUNCS(syscall)
 
 AC_CHECK_FUNCS(_dup _dup2 _opendir _readdir _seekdir _telldir _closedir)
 AC_CHECK_FUNCS(__dup __dup2 __opendir __readdir __seekdir __telldir __closedir)
@@ -242,6 +185,71 @@ AC_CHECK_FUNCS(__sys_llseek llseek _llseek __llseek readdir64 _readdir64 __readd
 AC_CHECK_FUNCS(pread _pread __pread pread64 _pread64 __pread64)
 AC_CHECK_FUNCS(pwrite _pwrite __pwrite pwrite64 _pwrite64 __pwrite64)
 AC_CHECK_FUNCS(open64 _open64 __open64 creat64)
+
+# this bit needs to be modified for each OS that is suported by
+# smbwrapper. You need to specify how to created a shared library and
+# how to compile C code to produce PIC object files
+
+# these are the defaults, good for lots of systems
+HOST_OS="$host_os"
+LDSHFLAGS="-shared"
+
+# and these are for particular systems
+case "$host_os" in
+		*linux*)   AC_DEFINE(LINUX);;
+		*solaris*) AC_DEFINE(SUNOS5)
+					LDSHFLAGS="-G"
+		;;
+		*sunos*) AC_DEFINE(SUNOS4)
+					LDSHFLAGS=""
+		;;
+		*bsd*) LDSHFLAGS="-shared -Bshareable"
+		;;
+		*irix*) AC_DEFINE(IRIX)
+			WRAP32=bin/smbwrapper.32.so
+		;;
+		*aix*) AC_DEFINE(AIX);;
+		*hpux*) AC_DEFINE(HPUX);;
+		*qnx*) AC_DEFINE(QNX);;
+		*osf*) AC_DEFINE(OSF1);;
+		*sco*) AC_DEFINE(SCO);;
+		*next2*) AC_DEFINE(NEXT2);;
+		*dgux*) AC_CHECK_PROG( ROFF, groff, [groff -etpsR -Tascii -man]);;
+		*sysv4.2*) AC_CHECK_LIB(resolv, strcasecmp);;
+esac
+
+# try to work out how to produce pic code with this compiler
+PICFLAG=""
+AC_PROG_CC_FLAG(fpic)
+if test $ac_cv_prog_cc_fpic = yes; then
+   PICFLAG="-fpic";
+fi
+if test x$PICFLAG = x; then
+  AC_PROG_CC_FLAG(Kpic)
+  if test $ac_cv_prog_cc_Kpic = yes; then
+    PICFLAG="-Kpic";
+  fi 
+fi
+if test x$PICFLAG = x; then
+  AC_PROG_CC_FLAG(KPIC)
+  if test $ac_cv_prog_cc_KPIC = yes; then
+    PICFLAG="-KPIC";
+  fi 
+fi
+
+WRAP="bin/smbsh bin/smbwrapper.so"
+
+# Conditions under which smbwrapper should not be built.
+
+if test x$PICFLAG = x; then
+   echo No support for PIC code - disabling smbwrapper and smbsh
+   WRAP=""
+elif test x$ac_cv_func_syscall = xno; then
+   AC_MSG_RESULT([No syscall() -- disabling smbwrapper and smbsh])
+   WRAP=""
+fi
+
+################
 
 AC_CACHE_CHECK([for long long],samba_cv_have_longlong,[
 AC_TRY_RUN([#include <stdio.h>
