Fixed makefile problem due to change from SMB_PASSWD to PASSWD_PROGRAM. Thanks to Michael H. Warfield <mhw@wittsend.com> for that. Jeremy.

--- a/packaging/PHT/TurboLinux/makefile-path.patch
+++ b/packaging/PHT/TurboLinux/makefile-path.patch
@@ -27,7 +27,7 @@
  CONFIGFILE = $(LIBDIR)/smb.conf
  LMHOSTSFILE = $(LIBDIR)/lmhosts
  DRIVERFILE = $(LIBDIR)/printers.def
- SMB_PASSWD = $(BINDIR)/smbpasswd
+ PASSWD_PROGRAM = /bin/passwd
 -SMB_PASSWD_FILE = $(BASEDIR)/private/smbpasswd
 +SMB_PASSWD_FILE = $(LIBDIR)/smbpasswd
  
