--- a/source3/configure.in
+++ b/source3/configure.in
@@ -206,7 +206,7 @@ case "$host_os" in
 		*bsd*) LDSHFLAGS="-shared -Bshareable"
 		;;
 		*irix*) AC_DEFINE(IRIX)
-			WRAP32=bin/smbwrapper.32.so
+			ATTEMPT_WRAP32_BUILD=yes
 		;;
 		*aix*) AC_DEFINE(AIX);;
 		*hpux*) AC_DEFINE(HPUX);;
@@ -235,18 +235,6 @@ if test x$PICFLAG = x; then
   if test $ac_cv_prog_cc_KPIC = yes; then
     PICFLAG="-KPIC";
   fi 
-fi
-
-WRAP="bin/smbsh bin/smbwrapper.so"
-
-# Conditions under which smbwrapper should not be built.
-
-if test x$PICFLAG = x; then
-   echo No support for PIC code - disabling smbwrapper and smbsh
-   WRAP=""
-elif test x$ac_cv_func_syscall = xno; then
-   AC_MSG_RESULT([No syscall() -- disabling smbwrapper and smbsh])
-   WRAP=""
 fi
 
 ################
@@ -551,6 +539,43 @@ AC_TRY_RUN([#include "${srcdir-.}/tests/sysv_ipc.c"],
 if test x"$samba_cv_HAVE_SYSV_IPC" = x"yes"; then
     AC_DEFINE(HAVE_SYSV_IPC)
 fi
+
+#################################################
+# check for smbwrapper support
+AC_MSG_CHECKING(whether to use smbwrapper)
+AC_ARG_WITH(smbwrapper,
+[  --with-smbwrapper     Include SMB wrapper support
+  --without-smbwrapper  Don't include SMB wrapper support (default)],
+[ case "$withval" in
+  yes)
+    AC_MSG_RESULT(yes)
+    AC_DEFINE(WITH_SMBWRAPPER)
+	WRAP="bin/smbsh bin/smbwrapper.so"
+
+	if test x$ATTEMPT_WRAP32_BUILD = x; then
+		WRAP32=""
+	else
+			WRAP32=bin/smbwrapper.32.so
+	fi
+
+# Conditions under which smbwrapper should not be built.
+
+	if test x$PICFLAG = x; then
+	   echo No support for PIC code - disabling smbwrapper and smbsh
+	   WRAP=""
+	   WRAP32=""
+	elif test x$ac_cv_func_syscall = xno; then
+	   AC_MSG_RESULT([No syscall() -- disabling smbwrapper and smbsh])
+	   WRAP=""
+	   WRAP32=""
+	fi
+    ;;
+  *)
+    AC_MSG_RESULT(no)
+    ;;
+  esac ],
+  AC_MSG_RESULT(no)
+)
 
 #################################################
 # check for the AFS filesystem
