compile with optimisation by default on all compilers
this has 2 effects:

1) non gcc platforms get some optimisation
2) it disables -g by default which means the samba binaries won't be
   so huge (they were over 60MB on some systems)

--- a/source/configure.in
+++ b/source/configure.in
@@ -10,6 +10,10 @@ AC_SUBST(HOST_OS)
 AC_SUBST(WRAP)
 AC_SUBST(WRAP32)
 AC_SUBST(PICFLAG)
+
+# compile with optimisation and without debugging by default
+CFLAGS=${CFLAGS-"-O"}
+
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL
