--- a/source3/include/config.h.in
+++ b/source3/include/config.h.in
@@ -594,6 +594,9 @@
 /* Define if you have the <fcntl.h> header file.  */
 #undef HAVE_FCNTL_H
 
+/* Define if you have the <glob.h> header file.  */
+#undef HAVE_GLOB_H
+
 /* Define if you have the <grp.h> header file.  */
 #undef HAVE_GRP_H
 
