--- a/source/configure.in
+++ b/source/configure.in
@@ -29,8 +29,8 @@ AC_HEADER_DIRENT
 AC_HEADER_TIME
 AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS(sys/fcntl.h sys/select.h fcntl.h sys/time.h sys/unistd.h)
-AC_CHECK_HEADERS(unistd.h utime.h grp.h sys/id.h limits.h memory.h net/if.h)
-AC_CHECK_HEADERS(compat.h rpc/rpc.h rpc/types.h rpc/xdr.h rpc/auth.h )
+AC_CHECK_HEADERS(unistd.h utime.h grp.h sys/id.h limits.h memory.h net/route.h net/if.h)
+AC_CHECK_HEADERS(compat.h rpc/rpc.h rpc/types.h rpc/xdr.h rpc/auth.h rpc/clnt.h)
 AC_CHECK_HEADERS(rpcsvc/yp_prot.h rpcsvc/ypclnt.h sys/param.h ctype.h )
 AC_CHECK_HEADERS(sys/wait.h sys/resource.h sys/ioctl.h sys/mode.h)
 AC_CHECK_HEADERS(sys/filio.h string.h strings.h stdlib.h sys/socket.h)
@@ -189,6 +189,11 @@ AC_CHECK_FUNCS(__sys_llseek llseek _llseek __llseek readdir64 _readdir64 __readd
 AC_CHECK_FUNCS(pread _pread __pread pread64 _pread64 __pread64)
 AC_CHECK_FUNCS(pwrite _pwrite __pwrite pwrite64 _pwrite64 __pwrite64)
 AC_CHECK_FUNCS(open64 _open64 __open64 creat64)
+
+if test x"$ac_cv_func_putprpwnam" = x"no"; then
+    AC_CHECK_LIB(security, putprpwnam, [LIBS="$LIBS -lsecurity";
+      AC_DEFINE(HAVE_PUTPRPWNAM)])
+fi
 
 # this bit needs to be modified for each OS that is suported by
 # smbwrapper. You need to specify how to created a shared library and
@@ -395,6 +400,28 @@ main() {
 samba_cv_HAVE_IRIX_SPECIFIC_CAPABILITIES=yes,samba_cv_HAVE_IRIX_SPECIFIC_CAPABILITIES=no,samba_cv_HAVE_IRIX_SPECIFIC_CAPABILITIES=cross)])
 if test x"$samba_cv_HAVE_IRIX_SPECIFIC_CAPABILITIES" = x"yes"; then
     AC_DEFINE(HAVE_IRIX_SPECIFIC_CAPABILITIES)
+fi
+
+AC_CACHE_CHECK([for broken int32 typedef included by rpc/rpc.h],samba_cv_HAVE_BROKEN_INT32_FROM_RPC_RPC_H,[
+AC_TRY_COMPILE([#include <sys/types.h>
+#if defined(HAVE_RPC_RPC_H)
+#include <rpc/rpc.h>
+#endif],
+[#define int32 int],
+samba_cv_HAVE_BROKEN_INT32_FROM_RPC_RPC_H=yes,samba_cv_HAVE_BROKEN_INT32_FROM_RPC_RPC_H=no)])
+if test x"$samba_cv_HAVE_BROKEN_INT32_FROM_RPC_RPC_H" = x"yes"; then
+    AC_DEFINE(HAVE_BROKEN_INT32_FROM_RPC_RPC_H)
+fi
+
+AC_CACHE_CHECK([for broken uint32 typedef included by rpc/rpc.h],samba_cv_HAVE_BROKEN_UINT32_FROM_RPC_RPC_H,[
+AC_TRY_COMPILE([#include <sys/types.h>
+#if defined(HAVE_RPC_RPC_H)
+#include <rpc/rpc.h>
+#endif],
+[#define uint32 unsigned int],
+samba_cv_HAVE_BROKEN_UINT32_FROM_RPC_RPC_H=yes,samba_cv_HAVE_BROKEN_UINT32_FROM_RPC_RPC_H=no)])
+if test x"$samba_cv_HAVE_BROKEN_UINT32_FROM_RPC_RPC_H" = x"yes"; then
+    AC_DEFINE(HAVE_BROKEN_UINT32_FROM_RPC_RPC_H)
 fi
 
 AC_MSG_CHECKING([for test routines])
