link and include hesiod
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5200 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/push/Makefile.am
+++ b/appl/push/Makefile.am
@@ -2,7 +2,7 @@
 
 AUTOMAKE_OPTIONS = no-dependencies foreign
 
-INCLUDES = -I$(top_builddir)/include $(INCLUDE_krb4)
+INCLUDES = -I$(top_builddir)/include $(INCLUDE_krb4) @HESIODINCLUDE@
 
 libexec_PROGRAMS	= push
 
@@ -13,3 +13,4 @@ LDADD = $(top_builddir)/lib/krb5/libkrb5.la \
 	$(top_builddir)/lib/des/libdes.la \
 	$(top_builddir)/lib/asn1/libasn1.la \
 	$(top_builddir)/lib/roken/libroken.la
+	@HESIODLIB@
