--- a/appl/push/Makefile.in
+++ b/appl/push/Makefile.in
@@ -9,12 +9,12 @@ VPATH = @srcdir@
 CC = @CC@
 LINK = @LINK@
 RANLIB = @RANLIB@
-DEFS = @DEFS@
+DEFS = @DEFS@ @HESIODINCLUDE@
 CFLAGS = @CFLAGS@
 LD_FLAGS = @LD_FLAGS@
 INSTALL = @INSTALL@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
-LIBS = @LIBS@
+LIBS = @HESIODLIB@ @LIBS@
 LIB_DBM = @LIB_DBM@
 MKINSTALLDIRS = @top_srcdir@/mkinstalldirs
 
